--- a/tic-tac-toe/DAL/DAL.csproj
+++ b/tic-tac-toe/DAL/DAL.csproj
@@ -7,7 +7,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\GameBrain\GameBrain.csproj" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ConsoleUI\ConsoleUI.csproj" />
+      <ProjectReference Include="..\Domain\Domain.csproj" />
+      <ProjectReference Include="..\GameBrain\GameBrain.csproj" />
+      <ProjectReference Include="..\MenuSystem\MenuSystem.csproj" />
     </ItemGroup>
 
 </Project>
