--- a/tic-tac-toe/WebApp/WebApp.csproj
+++ b/tic-tac-toe/WebApp/WebApp.csproj
@@ -17,4 +17,8 @@
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Include="wwwroot\css\game.css" />
+    </ItemGroup>
+
 </Project>
