--- a/tic-tac-toe/WebApp/WebApp.csproj
+++ b/tic-tac-toe/WebApp/WebApp.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <PackageReference Include="bootstrap" Version="5.3.3" />
+      <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
